--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p class="text-center">Hey there! <br>
             I'm a University of Illinois at Urbana-Champaign student.<br>
             This site is a place where I can show off my work and skills. <br>
-            If you have any questions at all, feel free to get in contact with me through <a href="mailto:danhee1012@gmail.com">email</a>, <a href="https://www.facebook.com/christopher.d.choi">Facebook</a> or <a href="https://twitter.com/danhee1012">Twitter</a>.</p>
+            If you have any questions at all, feel free to get in contact with me through <a href="mailto:danhee1012@gmail.com">email</a>, <a href="https://www.facebook.com/christopher.d.choi" target="_blank">Facebook</a> or <a href="https://twitter.com/danhee1012" target="_blank">Twitter</a>.</p>
             <br>
           </div>
           <div class="container-fluid dark" id="about">
@@ -127,7 +127,7 @@
                       <h4>Lusication</h4>
                       <p class="text-justify">My friend and I made a web service for spring 2014 Hackillinois called Lusication . Lusication is a location-based music sharing network service. Lusication provides the songs your neigbors are listening to.</p>
                       <p>Technologies used: HTML, CSS Javascript, JQuery, Firebase, Rdio</p>
-                      <p><a href="http://swha0901.github.io/Lusication/">Visit</a></p>
+                      <p><a href="http://swha0901.github.io/Lusication/" target="_blank">Visit</a></p>
                     </div>
                   </div>
                </div>   
@@ -154,22 +154,22 @@
               <div class="row">
                 <div class="col-md-3">
                   <div class="contact-btn">
-                    <a href="https://twitter.com/danhee1012" target=_blank><i class="fa fa-twitter-square"></i></a>
+                    <a href="https://twitter.com/danhee1012" target="_blank"><i class="fa fa-twitter-square"></i></a>
                   </div>
                 </div>
                 <div class="col-md-3">
                   <div class="contact-btn">
-                    <a href="https://www.facebook.com/christopher.d.choi" target=_blank><i class="fa fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/christopher.d.choi" target="_blank"><i class="fa fa-facebook-square"></i></a>
                   </div>
                 </div>
                 <div class="col-md-3">
                   <div class="contact-btn">
-                    <a href="https://github.com/danhee1012" target=_blank><i class="fa fa-github-square"></i></a>
+                    <a href="https://github.com/danhee1012" target="_blank"><i class="fa fa-github-square"></i></a>
                   </div>
                 </div>
 				<div class="col-md-3">
                   <div class="contact-btn">
-                    <a href="https://plus.google.com/101247220040337548201" target=_blank><i class="fa fa-google-plus-square"></i></a>
+                    <a href="https://plus.google.com/101247220040337548201" target="_blank"><i class="fa fa-google-plus-square"></i></a>
                   </div>
                 </div>
               </div> <br><br><br>
@@ -179,7 +179,7 @@
       </div>
       <div id="footer">
         <div class="container">
-          <p class = "text-center">Sites by <a href="https://twitter.com/danhee1012">@danhee1012</a>. <br></p>
+          <p class = "text-center">Sites by <a href="https://twitter.com/danhee1012" target="_blank">@danhee1012</a>. <br></p>
         </div>
       </div>
       <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.11.5/TweenMax.min.js"></script>
