--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Christopher Danhee Choi Portfolio</title>
-    <link href='//fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Narrow|PT+Serif' rel='stylesheet' type='text/css'>
+      <link rel="shortcut icon" href="favicon.ico">
+	  <link href='//fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Narrow|PT+Serif' rel='stylesheet' type='text/css'>
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
       <link rel="stylesheet" href="/style.css">
-	  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	  
       <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
       <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
       <!--[if lt IE 9]>
