--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
 			  <ul>
                   <li>Teacher’s Assistant</li>
                   <li>September 2010 - May 2013</li>
-              </ul>  
+              </ul>
+		      <h4>Hope &amp; Joy Summer School for Mentally Ill Students
+              </h4>
+			  <ul>
+                  <li>Teacher’s Assistant</li>
+                  <li>July 2010 &amp; July 2012</li>
+              </ul>
             </div>
             <br>
           </div>
@@ -95,8 +101,10 @@
                   <li>C/C++</li>
                   <li>Python</li>
                   <li>Java</li>
-                  <li>Javascript</li>
                   <li>HTML5</li>
+				  <li>CSS3</li>
+				  <li>Javascript</li>
+				  <li>PHP</li>
                 </ul>
               </div>
               <div class="col-sm-4 divider">
