--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                 <h4 class="text-center">What else?</h4>
                 <ul>
                   <li>Bilingual: Korean and English</li>
-                  <li>Programs: Adobe Photoshop</li>
+                  <li>Microsoft Office: Word, Excel, PowerPoint, Publisher, Access</li>
+				  <li>Adobe Softwares: Photoshop, Illustrator</li>
                 </ul>
               </div>
             </div>
