--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </a>
                     <div class="collapse" id="craneshout">
                       <h4>Lusication</h4>
-                      <p class="text-justify">My friend and I made a web service for spring 2014 Hackillinois called Lusication . Lusication is a location-based music sharing network service. Lusication provides the songs your neigbors are listening to.</p>
+                      <p class="text-justify">My friend and I made a web service for spring 2014 Hackillinois called Lusication . Lusication is a location-based music sharing network service. Lusication provides the songs your neigbors are listening to. (Since Firebase trial is expired, the service is not available right now.)</p>
                       <p>Technologies used: HTML, CSS Javascript, JQuery, Firebase, Rdio</p>
                       <p><a href="http://swha0901.github.io/Lusication/" target="_blank">Visit</a></p>
                     </div>
