--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	  <link href='//fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Narrow|PT+Serif' rel='stylesheet' type='text/css'>
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-      <link rel="stylesheet" href="/style.css">
+      <link rel="stylesheet" href="style.css">
 	  
       <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
       <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -127,13 +127,13 @@
             <h2 class="text-center">What I have done.</h2>
             <h5 class="text-center">Click the images to view descriptions.</h5><br>
             <div class="row">
-              <div class="col-md-6 col-sm-12">
+              <div class="col-lg-6 col-md-6 col-sm-12">
                 <div class="row">
                   <div class="col-sm-6">
-                    <a data-toggle="collapse" data-target="#craneshout">
+                    <a data-toggle="collapse" data-target="#lusication">
                     <img src="/lusication.png" alt="" class="proj-img">
                     </a>
-                    <div class="collapse" id="craneshout">
+                    <div class="collapse" id="lusication">
                       <h4>Lusication</h4>
                       <p class="text-justify">My friend and I made a web service for spring 2014 Hackillinois called Lusication . Lusication is a location-based music sharing network service. Lusication provides the songs your neigbors are listening to. (Since Firebase trial is expired, the service is not available right now.)</p>
                       <p>Technologies used: HTML, CSS Javascript, JQuery, Firebase, Rdio</p>
@@ -193,6 +193,6 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.11.5/TweenMax.min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
       <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-      <script src="/script.js"></script>
+      <script src="script.js"></script>
     </body>
   </html>
