--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	  <link href='//fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Narrow|PT+Serif' rel='stylesheet' type='text/css'>
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="/style.css">
 	  
       <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
       <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -127,7 +127,7 @@
             <h2 class="text-center">What I have done.</h2>
             <h5 class="text-center">Click the images to view descriptions.</h5><br>
             <div class="row">
-              <div class="col-lg-6 col-md-6 col-sm-12">
+              <div class="col-lg-6 col-sm-12">
                 <div class="row">
                   <div class="col-sm-6">
                     <a data-toggle="collapse" data-target="#lusication">
@@ -193,6 +193,6 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.11.5/TweenMax.min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
       <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-      <script src="script.js"></script>
+      <script src="/script.js"></script>
     </body>
   </html>
