--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <h2 class="text-center">What I have done.</h2>
             <h5 class="text-center">Click the images to view descriptions.</h5><br>
             <div class="row">
-              <div class="col-lg-6 col-sm-12">
+              <div class="col-md-6 col-sm-12">
                 <div class="row">
                   <div class="col-sm-6">
                     <a data-toggle="collapse" data-target="#lusication">
@@ -136,8 +136,19 @@
                     <div class="collapse" id="lusication">
                       <h4>Lusication</h4>
                       <p class="text-justify">My friend and I made a web service for spring 2014 Hackillinois called Lusication . Lusication is a location-based music sharing network service. Lusication provides the songs your neigbors are listening to. (Since Firebase trial is expired, the service is not available right now.)</p>
-                      <p>Technologies used: HTML, CSS Javascript, JQuery, Firebase, Rdio</p>
+                      <p>Technologies used: HTML, CSS, Javascript, JQuery, Firebase, Rdio</p>
                       <p><a href="http://swha0901.github.io/Lusication/" target="_blank">Visit</a></p>
+                    </div>
+                  </div>
+				  <div class="col-sm-6">
+                    <a data-toggle="collapse" data-target="#lesclaviers">
+                    <img src="/lesclaviers.png" alt="" class="proj-img">
+                    </a>
+                    <div class="collapse" id="lesclaviers">
+                      <h4>Les Claviers Website</h4>
+                      <p class="text-justify">I designed and made this website for UIUC Registered Student Organization Les Claviers.</p>
+                      <p>Technologies used: HTML, CSS, Bootstrap</p>
+                      <p><a href="http://lesclaviers.github.io/" target="_blank">Visit</a></p>
                     </div>
                   </div>
                </div>   
