--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <small>University of Illinois Student</small></h1>
             <br>
             <p class="text-center">Hey there! <br>
-            I'm a University of Illinois at Urbana-Champaign student.<br>
+            I'm a student at the University of Illinois at Urbana-Champaign.<br>
             This site is a place where I can show off my work and skills. <br>
             If you have any questions at all, feel free to get in contact with me through <a href="mailto:danhee1012@gmail.com">email</a>, <a href="https://www.facebook.com/christopher.d.choi" target="_blank">Facebook</a> or <a href="https://twitter.com/danhee1012" target="_blank">Twitter</a>.</p>
             <br>
@@ -135,7 +135,7 @@
                     </a>
                     <div class="collapse" id="lusication">
                       <h4>Lusication</h4>
-                      <p class="text-justify">My friend and I made a web service for spring 2014 Hackillinois called Lusication . Lusication is a location-based music sharing network service. Lusication provides the songs your neigbors are listening to. (Since Firebase trial is expired, the service is not available right now.)</p>
+                      <p class="text-justify">My friend and I made a web service called Lusication for the 2014 Spring Hackillinois. Lusication is a location-based music sharing network service. Lusication provides the songs your neigbors are listening to. (Since Firebase trial is expired, the service is not available right now.)</p>
                       <p>Technologies used: HTML, CSS, Javascript, JQuery, Firebase, Rdio</p>
                       <p><a href="http://swha0901.github.io/Lusication/" target="_blank">Visit</a></p>
                     </div>
@@ -145,8 +145,8 @@
                     <img src="/lesclaviers.png" alt="" class="proj-img">
                     </a>
                     <div class="collapse" id="lesclaviers">
-                      <h4>Les Claviers Website</h4>
-                      <p class="text-justify">I designed and made this website for UIUC Registered Student Organization Les Claviers.</p>
+                      <h4>Les Claviers</h4>
+                      <p class="text-justify">I designed and made this website for the University of Illinois Urbana-Champaign Registered Student Organization Les Claviers.</p>
                       <p>Technologies used: HTML, CSS, Bootstrap</p>
                       <p><a href="http://lesclaviers.github.io/" target="_blank">Visit</a></p>
                     </div>
