--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			  <h4>University of Illinois at Urbana-Champaign
               </h4>
 			  <ul>
-                  <li>Division of General Studies</li>
+                  <li>Sophomore - Division of General Studies</li>
                   <li>Overall GPA: 3.75/4.00</li>
               </ul>
               <h3 class="text-center">Activities</h3>
@@ -112,6 +112,7 @@
                 <ul>
                   <li>NodeJS</li>
                   <li>Bootstrap</li>
+				  <li>RespondJS</li>
                 </ul>
               </div>
               <div class="col-sm-4">
@@ -146,7 +147,7 @@
                     </a>
                     <div class="collapse" id="lesclaviers">
                       <h4>Les Claviers</h4>
-                      <p class="text-justify">I designed and made this website for the University of Illinois Urbana-Champaign Registered Student Organization Les Claviers.</p>
+                      <p class="text-justify">I designed and made this website for the University of Illinois at Urbana-Champaign Registered Student Organization Les Claviers.</p>
                       <p>Technologies used: HTML, CSS, Bootstrap</p>
                       <p><a href="http://lesclaviers.github.io/" target="_blank">Visit</a></p>
                     </div>
