--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 			  <h4>University of Illinois at Urbana-Champaign
               </h4>
 			  <ul>
-                  <li>Sophomore - Division of General Studies</li>
-                  <li>Overall GPA: 3.75/4.00</li>
+                  <li>Sophomore - Statistics &amp; Computer Science</li>
+                  <li>Overall GPA: 3.68/4.00</li>
               </ul>
               <h3 class="text-center">Activities</h3>
               <h4>High School Academic Competition Team
