--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Christopher Danhee Choi Portfolio</title>
-      <link rel="shortcut icon" href="/favicon.ico">
+      <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 	  <link href='//fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Narrow|PT+Serif' rel='stylesheet' type='text/css'>
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -65,18 +65,30 @@
                   <li>Overall GPA: 3.68/4.00</li>
               </ul>
               <h3 class="text-center">Activities</h3>
-              <h4>High School Academic Competition Team
+              <h4>Les Claviers Registered Student Organization
+              </h4>
+			  <ul>
+                  <li>Web Designer / Web Developer</li>
+                  <li>July 2014 - Present</li>
+              </ul>
+			  <h4>Woorijib Korean Restaurant
+              </h4>
+			  <ul>
+                  <li>Cashier</li>
+                  <li>August 2014 - Present</li>
+              </ul>
+			  <h4>High School Academic Competition Team
               </h4>
 			  <ul>
                   <li>President / Team Captain</li>
                   <li>September 2010 - May 2013</li>
               </ul>
-				<h4>High School JV/Varsity Boy’s Tennis Team
+			  <h4>High School JV/Varsity Boy’s Tennis Team
               </h4>
 			  <ul>
                   <li>2nd Double Player</li>
                   <li>September 2011 - May 2013</li>
-              </ul>  
+              </ul>
 			  <h4>Korean United Church of Philadelphia Korean School
               </h4>
 			  <ul>
