--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Christopher Danhee Choi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Christopher Danhee Choi Portfolio</title>
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
