--- a/index.html
+++ b/index.html
@@ -186,6 +186,30 @@
 									</div>
 								</div>
 							</div>   
+							<div class="row">
+								<div class="col-sm-6">
+									<a data-toggle="collapse" data-target="#daesign">
+										<img src="/daesign.png" alt="" class="proj-img">
+									</a>
+									<div class="collapse" id="lusication">
+										<h4>Daesign</h4>
+										<p class="text-justify">I designed and made this website for my father sign design/installation business website.</p>
+										<p>Technologies used: HTML, CSS, Javascript, Bootstrap</p>
+										<p><a href="http://www.ddaesign.com/" target="_blank">Visit</a></p>
+									</div>
+								</div>
+								<div class="col-sm-6">
+									<a data-toggle="collapse" data-target="#lesclaviers">
+										<img src="/lesclaviers.png" alt="" class="proj-img">
+									</a>
+									<div class="collapse" id="lesclaviers">
+										<h4>Les Claviers</h4>
+										<p class="text-justify">I designed and made this website for the University of Illinois at Urbana-Champaign Registered Student Organization Les Claviers.</p>
+										<p>Technologies used: HTML, CSS, Bootstrap</p>
+										<p><a href="http://lesclaviers.github.io/" target="_blank">Visit</a></p>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 					<br><br>
