--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 									<a data-toggle="collapse" data-target="#daesign">
 										<img src="/daesign.png" alt="" class="proj-img">
 									</a>
-									<div class="collapse" id="lusication">
+									<div class="collapse" id="daesign">
 										<h4>Daesign</h4>
 										<p class="text-justify">I designed and made this website for my father sign design/installation business website.</p>
 										<p>Technologies used: HTML, CSS, Javascript, Bootstrap</p>
@@ -199,14 +199,14 @@
 									</div>
 								</div>
 								<div class="col-sm-6">
-									<a data-toggle="collapse" data-target="#lesclaviers">
-										<img src="/lesclaviers.png" alt="" class="proj-img">
+									<a data-toggle="collapse" data-target="#sportscentral">
+										<img src="/sportscentral.png" alt="" class="proj-img">
 									</a>
-									<div class="collapse" id="lesclaviers">
-										<h4>Les Claviers</h4>
-										<p class="text-justify">I designed and made this website for the University of Illinois at Urbana-Champaign Registered Student Organization Les Claviers.</p>
-										<p>Technologies used: HTML, CSS, Bootstrap</p>
-										<p><a href="http://lesclaviers.github.io/" target="_blank">Visit</a></p>
+									<div class="collapse" id="sportscentral">
+										<h4>Sports Central</h4>
+										<p class="text-justify">For my CS 410 project, my partner and I made a sports central website in order to search sports-related articles. The website also provides users' opinions on sports event and incidents from Twitter. Click project report for more details.</p>
+										<p>Technologies used: HTML, CSS, Bootstrap, JavaScript, AJAX, JSON, Python, Java, Apache Lucene, Apache Solr, Terminal Commands (GNU Wget, find)</p>
+										<p><a href="report.pdf" target="_blank">Project Report</a></p>
 									</div>
 								</div>
 							</div>
