--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
 										<p><a href="http://lesclaviers.github.io/" target="_blank">Visit</a></p>
 									</div>
 								</div>
+							</div>
+						</div>
+						<div class="col-md-6 col-sm-12">
+							<div class="row">
 								<div class="col-sm-6">
 									<a data-toggle="collapse" data-target="#daesign">
 										<img src="/daesign.png" alt="" class="proj-img">
