--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<ul>
 							<li>CS 411: Text Information Systems</li>
 							<li>CS 412: Introduction to Data Mining</li>
-							<li>CS 210: Ethical & Professional Issues</li>
+							<li>CS 210: Ethical &amp; Professional Issues</li>
 							<li>STAT 400: Statistics and Probability I</li>
 						</ul>
 
