--- a/index.html
+++ b/index.html
@@ -232,22 +232,22 @@
 							<small>Feel free to contact me through <a href="mailto:danhee1012@gmail.com">email</a> or through any of the methods below.</small></h3><br><br>
 						<div class="row">
 							<div class="col-md-3">
-								<div class="contact-btn">
+								<div class="contact-btn btn-twt">
 									<a href="https://twitter.com/danhee1012" target="_blank"><i class="fa fa-twitter-square"></i></a>
 								</div>
 							</div>
 							<div class="col-md-3">
-								<div class="contact-btn">
+								<div class="contact-btn btn-fb">
 									<a href="https://www.facebook.com/christopher.d.choi" target="_blank"><i class="fa fa-facebook-square"></i></a>
 								</div>
 							</div>
 							<div class="col-md-3">
-								<div class="contact-btn">
+								<div class="contact-btn btn-gh">
 									<a href="https://github.com/danhee1012" target="_blank"><i class="fa fa-github-square"></i></a>
 								</div>
 							</div>
 							<div class="col-md-3">
-								<div class="contact-btn">
+								<div class="contact-btn btn-gp">
 									<a href="https://plus.google.com/101247220040337548201" target="_blank"><i class="fa fa-google-plus-square"></i></a>
 								</div>
 							</div>
