--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Christopher Danhee Choi</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Christopher Danhee Choi Portfolio</title>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<link href='//fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Narrow|PT+Serif' rel='stylesheet' type='text/css'>
 		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -91,36 +90,43 @@
 						<ul>
 							<li>Web Designer / Web Developer</li>
 							<li>July 2014 - Present</li>
+							<li>Designed and implemented its official website.</li>
+							<li>Updated design and other features.</li>
+							<li><b>Check bottom for more details.</b></li>
 						</ul>
-						<h4>Woorijib Korean Restaurant
+						<h4>Woori Jib Korean Restaurant
 						</h4>
 						<ul>
 							<li>Cashier</li>
 							<li>August 2014 - Present</li>
+							<li>Operated POS cash register application on iPad for store.</li>
+							<li>Advised customers on food choices.</li>
+							<li>Served dishes from kitchen to customers' hands.</li>
+							<li></li>
 						</ul>
 						<h4>High School Academic Competition Team
 						</h4>
 						<ul>
 							<li>President / Team Captain</li>
 							<li>September 2010 - May 2013</li>
-						</ul>
-						<h4>High School JV/Varsity Boy’s Tennis Team
-						</h4>
-						<ul>
-							<li>2nd Double Player</li>
-							<li>September 2011 - May 2013</li>
+							<li>Managed and conducted all the club meetings and events.</li>
+							<li>chose and led team members at academic team competitions.</li>
 						</ul>
 						<h4>Korean United Church of Philadelphia Korean School
 						</h4>
 						<ul>
 							<li>Teacher’s Assistant</li>
 							<li>September 2010 - May 2013</li>
+							<li>Taught Korean to students Pre-K to 8th grade.</li>
+							<li>Filmed and editted videos for graduation ceremony.</li>
+							<li>Prepared and printed materials for the class.</li>
 						</ul>
 						<h4>Hope &amp; Joy Summer School for Mentally Ill Students
 						</h4>
 						<ul>
 							<li>Teacher’s Assistant</li>
 							<li>July 2010 &amp; July 2012</li>
+							<li>Taught students with Down syndrome basic math and writing skills.</li>
 						</ul>
 					</div>
 					<br>
@@ -138,6 +144,8 @@
 								<li>CSS3</li>
 								<li>Javascript</li>
 								<li>PHP</li>
+								<li>MySQL</li>
+								<li>MATLAB</li>
 							</ul>
 						</div>
 						<div class="col-sm-4 divider">
@@ -151,6 +159,7 @@
 						<div class="col-sm-4">
 							<h4 class="text-center">What else?</h4>
 							<ul>
+								<li>Apache&#0153;: Hadoop, Solr</li>
 								<li>Bilingual: Korean and English</li>
 								<li>Microsoft Office: Word, Excel, PowerPoint, Publisher, Access</li>
 								<li>Adobe Softwares: Photoshop, Illustrator</li>
