--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<h4>Currently Taking
 						</h4>
 						<ul>
-							<li>CS 411: Text Information Systems</li>
+							<li>CS 411: Database Systems</li>
 							<li>CS 412: Introduction to Data Mining</li>
 							<li>CS 210: Ethical &amp; Professional Issues</li>
 							<li>STAT 400: Statistics and Probability I</li>
