--- a/index.html
+++ b/index.html
@@ -91,17 +91,26 @@
 							<li>Web Designer / Web Developer</li>
 							<li>July 2014 - Present</li>
 							<li>Designed and implemented its official website.</li>
-							<li>Updated design and other features.</li>
+							<li>Actively Updating design and other features.</li>
 							<li><b>Check bottom for more details.</b></li>
+						</ul>
+						<h4>Crossway Reistered Student Organization (Korean Church of Champaign-Urbana)
+						</h4>
+						<ul>
+							<li>Lead Singer / Bible Study Teacher</li>
+							<li>August 2013 - Present</li>
+							<li>Lead worship as a lead singer every Friday at undergraduate ministry service.</li>
+							<li>Teach bible study and lead activities that go along with the bible study every Sunday</li>
+							<li>Supervise Pre-K students while their parents are in service</li>
 						</ul>
 						<h4>Woori Jib Korean Restaurant
 						</h4>
 						<ul>
 							<li>Cashier</li>
 							<li>August 2014 - Present</li>
-							<li>Operated POS cash register application on iPad for store.</li>
-							<li>Advised customers on food choices.</li>
-							<li>Served dishes from kitchen to customers' hands.</li>
+							<li>Operate POS cash register application on iPad in the store.</li>
+							<li>Advise customers on food choices.</li>
+							<li>Serve dishes from kitchen to customers' hands.</li>
 						</ul>
 						<h4>High School Academic Competition Team
 						</h4>
@@ -109,7 +118,7 @@
 							<li>President / Team Captain</li>
 							<li>September 2010 - May 2013</li>
 							<li>Managed and conducted all the club meetings and events.</li>
-							<li>chose and led team members at academic team competitions.</li>
+							<li>Chose and led team members at academic team competitions.</li>
 						</ul>
 						<h4>Korean United Church of Philadelphia Korean School
 						</h4>
@@ -118,7 +127,7 @@
 							<li>September 2010 - May 2013</li>
 							<li>Taught Korean to students Pre-K to 8th grade.</li>
 							<li>Filmed and editted videos for graduation ceremony.</li>
-							<li>Prepared and printed materials for the class.</li>
+							<li>Prepared and printed materials for class.</li>
 						</ul>
 						<h4>Hope &amp; Joy Summer School for Mentally Ill Students
 						</h4>
