--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 							<li>Lead Singer / Bible Study Teacher</li>
 							<li>August 2013 - Present</li>
 							<li>Lead worship as a lead singer every Friday at undergraduate ministry service.</li>
-							<li>Teach bible study and lead activities that go along with the bible study every Sunday</li>
-							<li>Supervise Pre-K students while their parents are in service</li>
+							<li>Teach bible study and lead activities that go along with the bible study every Sunday.</li>
+							<li>Supervise Pre-K students while their parents are in service.</li>
 						</ul>
 						<h4>Woori Jib Korean Restaurant
 						</h4>
