--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 								<li>PHP</li>
 								<li>MySQL</li>
 								<li>MATLAB</li>
+								<li>jQuery</li>
 							</ul>
 						</div>
 						<div class="col-sm-4 divider">
@@ -162,6 +163,8 @@
 								<li>NodeJS</li>
 								<li>Bootstrap</li>
 								<li>RespondJS</li>
+								<li>Flask</li>
+								<li>ngrok</li>
 							</ul>
 						</div>
 						<div class="col-sm-4">
@@ -226,6 +229,23 @@
 										<p class="text-justify">For my CS 410 project, my partner and I made a sports central website in order to search sports-related articles. The website also provides users' opinions on sports event and incidents from Twitter. Click project report for more details.</p>
 										<p>Technologies used: HTML, CSS, Bootstrap, JavaScript, AJAX, JSON, Python, Java, Apache Lucene, Apache Solr, Terminal Commands (GNU Wget, find)</p>
 										<p><a href="report.pdf" target="_blank">Project Report</a></p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6 col-sm-12">
+							<div class="row">
+								<div class="col-sm-6">
+									<a data-toggle="collapse" data-target="#phonebell">
+										<img src="/phonebell.png" alt="" class="proj-img">
+									</a>
+									<div class="collapse" id="phonebell">
+										<h4>Phonebell</h4>
+										<p class="text-justify">My friends and I made a website called Phonebell. Phonebell is a Web App that allows a user to scan a QR code at a door instead of ringing an old last-century doorbell. This QR code contains an encrypted url that interacts with the Twilio API to call or text the homeowner. </p>
+										<p>Technologies used: HTML, CSS, Javascript, Bootstrap, Python, Flask, Twilio API, ngrok</p>
+										<p><a href="http://hackmizzoudoorbell.github.io/" target="_blank">Visit</a></p>
 									</div>
 								</div>
 							</div>
