--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 						Christopher Danhee Choi <br>
 						<small>University of Illinois Student</small></h1>
 					<br>
-					<p class="text-center">Hey there! <br>
+					<p class="text-center">Hey there! 
+						<br>
 						I'm a student at the University of Illinois at Urbana-Champaign.<br>
 						This site is a place where I can show off my work and skills. <br>
 						If you have any questions at all, feel free to get in contact with me through <a href="mailto:danhee1012@gmail.com">email</a>, <a href="https://www.facebook.com/christopher.d.choi" target="_blank">Facebook</a> or <a href="https://twitter.com/danhee1012" target="_blank">Twitter</a>.</p>
@@ -80,11 +81,18 @@
 						<ul>
 							<li>CS 411: Database Systems</li>
 							<li>CS 412: Introduction to Data Mining</li>
-							<li>CS 210: Ethical &amp; Professional Issues</li>
 							<li>STAT 400: Statistics and Probability I</li>
 						</ul>
 
 						<h3 class="text-center">Activities</h3>
+						<h4>Harvard Business School
+						</h4>
+						<ul>
+							<li>Research Assistant - Computer/Web</li>
+							<li>October 2014 - Present</li>
+							<li>Work with other graduates students at UIUC Business School and Amseterdam Business School for Professor Xuan at Harvard Business School.</li>
+							<li>Locate and organize data from 10000+ files into Excel file using Python Programming Language and terminal commands.</li>
+						</ul>
 						<h4>Les Claviers Registered Student Organization
 						</h4>
 						<ul>
@@ -190,7 +198,7 @@
 									<div class="collapse" id="lusication">
 										<h4>Lusication</h4>
 										<p class="text-justify">My friend and I made a web service called Lusication for the 2014 Spring Hackillinois. Lusication is a location-based music sharing network service. Lusication provides the songs your neigbors are listening to. (Since Firebase trial is expired, the service is not available right now.)</p>
-										<p>Technologies used: HTML, CSS, Javascript, JQuery, Firebase, Rdio</p>
+										<p>Technologies used: HTML, CSS, Javascript, jQuery, Firebase, Rdio API</p>
 										<p><a href="http://swha0901.github.io/Lusication/" target="_blank">Visit</a></p>
 									</div>
 								</div>
@@ -243,8 +251,8 @@
 									</a>
 									<div class="collapse" id="phonebell">
 										<h4>Phonebell</h4>
-										<p class="text-justify">My friends and I made a website called Phonebell. Phonebell is a Web App that allows a user to scan a QR code at a door instead of ringing an old last-century doorbell. This QR code contains an encrypted url that interacts with the Twilio API to call or text the homeowner. </p>
-										<p>Technologies used: HTML, CSS, Javascript, Bootstrap, Python, Flask, Twilio API, ngrok</p>
+										<p class="text-justify">My friends and I made a website called Phonebell 2014 Fall HackMizzou. Phonebell is a Web App that allows a user to scan a QR code at a door instead of ringing an old last-century doorbell. This QR code contains an encrypted url that interacts with the Twilio API to call or text the homeowner. </p>
+										<p>Technologies used: HTML, CSS, Javascript, jQuery, Bootstrap, Python, Flask, ngrok, Twilio API</p>
 										<p><a href="http://hackmizzoudoorbell.github.io/" target="_blank">Visit</a></p>
 									</div>
 								</div>
@@ -261,6 +269,7 @@
 						<li>2010 Governor Honors for First Place for the KSEA National Math Competition (Governor Edward G. Rendell)</li>
 						<li>2010 KSEA National Math Competition 9th Grade First Place in Philadelphia Chapter</li>
 						<li>2014 Spring Hackillinois Participation</li>
+						<li>2014 Fall HackMizzou Participation</li>
 					</ul>
 				</div><br><br><br>
 				<div class="container-fluid dark" id="contacts">
