--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
 						</h4>
 						<ul>
 							<li>Graduated 2013</li>
-							<li>Cumulative GPA: 4.24/4.00</li>
+							<li>Cumulative GPA: 4.004.00</li>
 						</ul>
 						<h4>University of Illinois at Urbana-Champaign
 						</h4>
 						<ul>
 							<li>Sophomore - Statistics &amp; Computer Science</li>
-							<li>Overall GPA: 3.68/4.00</li>
+							<li>Overall GPA: 3.53/4.00</li>
+							<li>Expected Graduation: Decemeber 2016</li>
 						</ul>
 						<h3 class="text-center">Major Courses</h3>
 						<h4>Already Taken
@@ -74,24 +75,35 @@
 							<li>CS 225: Data Structures</li>
 							<li>CS 241: System Programming</li>
 							<li>CS 410: Text Information Systems</li>
-						</ul>
-
-						<h4>Currently Taking
-						</h4>
-						<ul>
 							<li>CS 411: Database Systems</li>
 							<li>CS 412: Introduction to Data Mining</li>
 							<li>STAT 400: Statistics and Probability I</li>
 						</ul>
 
 						<h3 class="text-center">Activities</h3>
+						<h4>State Farm
+						</h4>
+						<ul>
+							<li>Intern - IT/Systems</li>
+							<li>Januaray 2015 - Present</li>
+							<li>Work with other interns to develop new algorithms for State Farm.</li>
+						</ul>
+
+						<h4>EP Purification, Inc.
+						</h4>
+						<ul>
+							<li>Volunteer/Intern - Software Engineer</li>
+							<li>October 2014 - Present</li>
+							<li>Designed and developed Node.js based monitoring software for the products by implementing serial port connection between Arduino and PC using programming languages: HTML, CSS, JavaScript, jQuery, Socket.IO, and Node.js Stack.</li>
+							<li>Learned and coded in Arduino programming language in order to use Arduino to monitor the product's status online.</li>
+						</ul>
 						<h4>Harvard Business School
 						</h4>
 						<ul>
 							<li>Research Assistant - Computer/Web</li>
 							<li>October 2014 - Present</li>
-							<li>Work with other graduates students at UIUC Business School and Amseterdam Business School for Professor Xuan at Harvard Business School.</li>
-							<li>Locate and organize data from 10000+ files into Excel file using Python Programming Language and terminal commands.</li>
+							<li>Work with other UIUC graduate students for Professor Xuan at Harvard Business School.</li>
+							<li>Locate and organize data from 40,000+ files into Excel file using Python Programming Language and terminal commands.</li>
 						</ul>
 						<h4>Les Claviers Registered Student Organization
 						</h4>
