--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						</h4>
 						<ul>
 							<li>Graduated 2013</li>
-							<li>Cumulative GPA: 4.004.00</li>
+							<li>Cumulative GPA: 4.00/4.00</li>
 						</ul>
 						<h4>University of Illinois at Urbana-Champaign
 						</h4>
@@ -194,6 +194,7 @@
 								<li>Bilingual: Korean and English</li>
 								<li>Microsoft Office: Word, Excel, PowerPoint, Publisher, Access</li>
 								<li>Adobe Softwares: Photoshop, Illustrator</li>
+								<li>Inno Setup 5</li>
 							</ul>
 						</div>
 					</div>
@@ -246,7 +247,7 @@
 									</a>
 									<div class="collapse" id="sportscentral">
 										<h4>Sports Central</h4>
-										<p class="text-justify">For my CS 410 project, my partner and I made a sports central website in order to search sports-related articles. The website also provides users' opinions on sports event and incidents from Twitter. Click project report for more details.</p>
+										<p class="text-justify">For my CS 410 project, my partner and I made a sports central website helping you to search sports-related news articles. The website also provides users' opinions on sports event and incidents from Twitter. Click project report for more details.</p>
 										<p>Technologies used: HTML, CSS, Bootstrap, JavaScript, AJAX, JSON, Python, Java, Apache Lucene, Apache Solr, Terminal Commands (GNU Wget, find)</p>
 										<p><a href="report.pdf" target="_blank">Project Report</a></p>
 									</div>
@@ -266,6 +267,17 @@
 										<p class="text-justify">My friends and I made a website called Phonebell 2014 Fall HackMizzou. Phonebell is a Web App that allows a user to scan a QR code at a door instead of ringing an old last-century doorbell. This QR code contains an encrypted url that interacts with the Twilio API to call or text the homeowner. </p>
 										<p>Technologies used: HTML, CSS, Javascript, jQuery, Bootstrap, Python, Flask, ngrok, Twilio API</p>
 										<p><a href="http://hackmizzoudoorbell.github.io/" target="_blank">Visit</a></p>
+									</div>
+								</div>
+								<div class="col-sm-6">
+									<a data-toggle="collapse" data-target="#phonebell">
+										<img src="/foodplanner.png" alt="" class="proj-img">
+									</a>
+									<div class="collapse" id="phonebell">
+										<h4>FOODPLANNER</h4>
+										<p class="text-justify">For CS 411 project, my teammates and I made a website helping you to search food recipe and ingredient according to your health and cusine preferences. And, it suggests food that would help them to manage your body fat and weight according to their data, and it provides body weight change trends graph. For this project, I designed and implemented the front-end part of the website/web application, and I wored on connection between PHP and school MySQL database.</p>
+										<p>Technologies used: HTML, CSS, Javascript, jQuery, Bootstrap, PHP, MySQL, JpGraph</p>
+										<p><a href="http://http://foodplanner.comeze.com/" target="_blank">Visit</a></p>
 									</div>
 								</div>
 							</div>
