--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
 									</div>
 								</div>
 								<div class="col-sm-6">
-									<a data-toggle="collapse" data-target="#phonebell">
+									<a data-toggle="collapse" data-target="#foodplanner">
 										<img src="/foodplanner.png" alt="" class="proj-img">
 									</a>
-									<div class="collapse" id="phonebell">
+									<div class="collapse" id="foodplanner">
 										<h4>FOODPLANNER</h4>
 										<p class="text-justify">For CS 411 project, my teammates and I made a website helping you to search food recipe and ingredient according to your health and cusine preferences. And, it suggests food that would help them to manage your body fat and weight according to their data, and it provides body weight change trends graph. For this project, I designed and implemented the front-end part of the website/web application, and I wored on connection between PHP and school MySQL database.</p>
 										<p>Technologies used: HTML, CSS, Javascript, jQuery, Bootstrap, PHP, MySQL, JpGraph</p>
