--- a/index.html
+++ b/index.html
@@ -282,6 +282,21 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-6 col-sm-12">
+							<div class="row">
+								<div class="col-sm-6">
+									<a data-toggle="collapse" data-target="#iamportfolio">
+										<img src="/iamportfolio.png" alt="" class="proj-img">
+									</a>
+									<div class="collapse" id="iamportfolio">
+										<h4>IAM Portfolio Fall 2014</h4>
+										<p class="text-justify">For International Advertising Mob (IAM) student organization, IAM Creative Team made a protfolio website for their fall 2014 semester's work. I primarily designed and implemented the website.</p>
+										<p>Technologies used: HTML, CSS, Javascript, jQuery</p>
+										<p><a href="http://iamuiuc.com/portfoliofa14/portfolio_fa14.html" target="_blank">Visit</a></p>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<br><br>
 					<h2 class="text-center">Honors / Awards</h2>
