--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
 							<li>Expected Graduation: Decemeber 2016</li>
 						</ul>
 						<h3 class="text-center">Major Courses</h3>
-						<h4>Already Taken
-						</h4>
 						<ul>
 							<li>CS 125: Intro to Computer Science</li>
 							<li>MATH 213: Basic Discrete Mathematics</li>
@@ -80,22 +78,24 @@
 							<li>STAT 400: Statistics and Probability I</li>
 						</ul>
 
-						<h3 class="text-center">Activities</h3>
+						<h3 class="text-center">Experience</h3>
 						<h4>State Farm
 						</h4>
 						<ul>
 							<li>Intern - IT/Systems</li>
 							<li>Januaray 2015 - Present</li>
-							<li>Work with other interns to develop new algorithms for State Farm.</li>
+							<li>Created video data collection program using Python programming language and OpenCV library in order to use the data for eye-tracking algorithm accuracy test.</li>
+							<li>Researched on and learned about eye-tracking algorithm using OpenCV library in details and wrote a report for the next interns to work on this project.</li>
 						</ul>
 
 						<h4>EP Purification, Inc.
 						</h4>
 						<ul>
 							<li>Volunteer/Intern - Software Engineer</li>
-							<li>October 2014 - Present</li>
-							<li>Designed and developed Node.js based monitoring software for the products by implementing serial port connection between Arduino and PC using programming languages: HTML, CSS, JavaScript, jQuery, Socket.IO, and Node.js Stack.</li>
-							<li>Learned and coded in Arduino programming language in order to use Arduino to monitor the product's status online.</li>
+							<li>October 2014 - May 2015</li>
+							<li>Designed and developed Node.js based monitoring software for the products by implementing serial port connection between Arduino and PC using programming languages: HTML, CSS, JavaScript, jQuery, Socket.IO, and Node.js Stack.</li>							
+							<li>Learned and coded in Arduino programming language in order to use Arduino to monitor the product's status online</li>
+							<li>Added Bluetooth feature to the product using Bluetooth modules and Arduino programming</li>
 						</ul>
 						<h4>Harvard Business School
 						</h4>
@@ -105,6 +105,17 @@
 							<li>Work with other UIUC graduate students for Professor Xuan at Harvard Business School.</li>
 							<li>Locate and organize data from 40,000+ files into Excel file using Python Programming Language and terminal commands.</li>
 						</ul>
+						<h4>Woori Jib Korean Restaurant
+						</h4>
+						<ul>
+							<li>Cashier</li>
+							<li>August 2014 - Present</li>
+							<li>Operate POS cash register application on iPad in the store.</li>
+							<li>Advise customers on food choices.</li>
+							<li>Serve dishes from kitchen to customers' hands.</li>
+						</ul>
+						
+						<h3 class="text-center">Experience</h3>
 						<h4>Les Claviers Registered Student Organization
 						</h4>
 						<ul>
@@ -123,15 +134,6 @@
 							<li>Teach bible study and lead activities that go along with the bible study every Sunday.</li>
 							<li>Supervise Pre-K students while their parents are in service.</li>
 						</ul>
-						<h4>Woori Jib Korean Restaurant
-						</h4>
-						<ul>
-							<li>Cashier</li>
-							<li>August 2014 - Present</li>
-							<li>Operate POS cash register application on iPad in the store.</li>
-							<li>Advise customers on food choices.</li>
-							<li>Serve dishes from kitchen to customers' hands.</li>
-						</ul>
 						<h4>High School Academic Competition Team
 						</h4>
 						<ul>
@@ -140,6 +142,8 @@
 							<li>Managed and conducted all the club meetings and events.</li>
 							<li>Chose and led team members at academic team competitions.</li>
 						</ul>
+						
+						<h3 class="text-center">Volunteer</h3>
 						<h4>Korean United Church of Philadelphia Korean School
 						</h4>
 						<ul>
