Add 2s play button

--- a/jhegame/index.html
+++ b/jhegame/index.html
@@ -24,6 +24,7 @@
 	<div id="title">Title:</div>
 	<div id="btn-container">
 		<button class="btn-play" value="1">1s</button>
+	        <button class="btn-play" value="2">2s</button>
 		<button class="btn-play" value="3">3s</button>
 		<button class="btn-play" value="5">5s</button>
 		<button class="btn-play" value="10">10s</button>
